Wed Jun  5 15:26:10 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* gc.c (before_gc_sweep): don't optimize it to avoid segv on Ubuntu
	  10.04 gcc 4.4.
	  http://u32.rubyci.org/~chkbuild/ruby-trunk/log/20130527T190301Z.diff.html.gz

Wed Jun  5 09:46:46 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* test/fileutils/test_fileutils.rb (TestFileUtils#test_mkdir): add
	  EACCES for Windows.

Wed Jun  5 08:13:37 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big_pow): Don't need to multiply SIZEOF_BDIGITS.
	  Use nlz instead of bitlength_bdigit.
	  (bitlength_bdigit): Removed.

Wed Jun  5 07:14:18 2013  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c (d_lite_cmp, d_lite_equal): simplified.

Wed Jun  5 07:07:01 2013  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: fixed a bug [ruby-core:55295].  reported
	  by Riley Lynch.

Wed Jun  5 06:44:08 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems 2.0.3

	* test/rubygems:  Tests for the above.

	* NEWS:  Added RubyGems 2.0.3 note.

Wed Jun  5 06:35:15 2013  Eric Hodel  <drbrain@segment7.net>

	* doc/marshal.rdoc:  Add description of Marshal format.

Wed Jun  5 01:16:09 2013  Benoit Daloze  <eregontp@gmail.com>

	* array.c (Array#+): fix documentation example.
	  Patch by Logan Serman. [Fixes GH-324]

Wed Jun  5 00:21:54 2013  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* lib/irb/lc/ja/help-message: update help messages.
	  following r41028. [ruby-dev:46707] [Feature #7510]

Wed Jun  5 00:09:32 2013  Tanaka Akira  <akr@fsij.org>

	* marshal.c (r_object0): Generalize a round up expression.
	  Use BDIGIT instead of int.

Tue Jun  4 23:44:02 2013  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* object.c (rb_Hash): fix docs. patched by Stefan Sch"ussler.
	  [ruby-core:55299] [Bug #8487]

Tue Jun  4 23:16:49 2013  Benoit Daloze  <eregontp@gmail.com>

	* lib/irb/completion.rb: Use %w literal construction for long lists.
	  Patch by Dave Goodchild. [Fixes GH-299]
